fix horizontal scroll error

--- a/mobile/scss/global.scss
+++ b/mobile/scss/global.scss
@@ -21,4 +21,5 @@ body {
 [ui-view] {
     height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
 }
